@@ -4,7 +4,7 @@ Manifest
 README
 Rakefile
 bin/boxgrinder-build
-boxgrinder-build.gemspec
+lib/boxgrinder-build.rb
 lib/boxgrinder-build/appliance.rb
 lib/boxgrinder-build/helpers/appliance-customize-helper.rb
 lib/boxgrinder-build/helpers/augeas-helper.rb
