@@ -76,8 +76,6 @@ module BoxGrinder
       options.default :delivery => :none
 
       options.force     = force
-      options.name      = program(:name)
-      options.version   = program(:version)
       options.platform  = options.platform.to_s.downcase.to_sym
       options.delivery  = options.delivery.to_s.downcase.to_sym
 
@@ -85,7 +83,7 @@ module BoxGrinder
 
       raise "Appliance definition file '#{appliance_definition_file}' could not be found" unless File.exists?(appliance_definition_file)
 
-      Appliance.new(appliance_definition_file, :options => options, :log => LogHelper.new(:threshold => $log_level)).create
+      Appliance.new(appliance_definition_file, :platfom => options.platform, :delivery => options.delivery, :force => options.force, :log => LogHelper.new(:threshold => $log_level)).create
     end
   end
 end
