@@ -16,12 +16,12 @@
 # Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 # 02110-1301 USA, or see the FSF site: http://www.fsf.org.
 
-require 'logger'
+require 'boxgrinder-core/helpers/log-helper'
 
 module BoxGrinder
   class LinuxHelper
     def initialize( options = {} )
-      @log = options[:log] || Logger.new(STDOUT)
+      @log = options[:log] || LogHelper.new
     end
 
     def kernel_version( guestfs )
