@@ -1,5 +1,7 @@
 v0.7.2
 
+* [BGBUILD-79] Allow to use BoxGrinder Build as a library
+
 v0.7.1
 
 * [BGBUILD-124] Guestfs fails while mounting multiple partitions with '_' prefix
